--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ iter-chunks = "0.1"
 itertools = "0.10"
 minitrace = "0.4.0"
 moka = { version = "0.11", features = ["future"] }
+nexmark = "0.2"
 num-traits = "0.2"
 ordered-float = { version = "3", features = ["serde"] }
 parking_lot = "0.12"
