--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ parse-display = "0.8"
 paste = "1"
 pgwire = "0.13"
 prost = "0.11.0"
+rand = { version = "0.8", features = ["small_rng"] }
 ref-cast = "1.0"
 regex = "1"
 risinglight_proto = "0.2"
